posting new item works

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,3 +37,15 @@ h3 {
 h3:hover {
   cursor: pointer;
 }
+
+#container-and-form {
+  display: flex;
+}
+
+input {
+  display: block;
+}
+
+.btn-add {
+  display: block;
+}
