appended options can now be patched

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,3 +49,11 @@ input {
 .btn-add {
   display: block;
 }
+
+#garage-item-container {
+  margin-right: 50px;
+}
+
+ul {
+  list-style-type: none;
+}
