--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   /*background-color: #28536B;*/
-  font-family: 'Open-Sans';
+  font-family: 'Helvetica';
 }
 
 body {
@@ -49,7 +49,7 @@ body {
 }
 
 #btn-garage {
-  width: 100px;
+  width: 150px;
   height: 25px;
   z-index: 2;
   position: absolute;
@@ -75,6 +75,7 @@ h3:hover {
   width: 100vw;
   justify-content: center;
   color: #fff;
+  font-weight: 300;
 }
 
 input {
@@ -82,6 +83,7 @@ input {
   width: 100%;
   height: 25px;
   margin: 5px;
+  font-size: 16pt;
 }
 
 .btn-add {
@@ -105,7 +107,7 @@ ul {
 
 .sort-a, .sort-z {
   width: 40%;
-  height: 25px;
+  height: 55px;
 }
 
 .lift {
@@ -114,6 +116,7 @@ ul {
 
 button {
   outline: none;
+  font-size: 16pt;
 }
 
 input {
