refactor appends so everything updates on dom correctly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,20 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #28536B;
+
+}
+
+header {
+  background-color: #28536B;
+  color: #fff;
+  height: 100px;
+  z-index: 11;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .hidden {
@@ -24,6 +38,10 @@ body {
   bottom: 0;
   overflow: hidden;
   transition: all 3s;
+  background-image: url('../assets/garage-door.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #garage-door .slide {
@@ -50,7 +68,7 @@ body {
   width: 150px;
   height: 25px;
   z-index: 2;
-  position: absolute;
+  /*position: absolute;*/
 }
 
 h1 {
